--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,18 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Restaurant Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p class="restaurant-name">Potion Passion Palace</p>
+      <nav>
+        <button>Home</button>
+        <button>Menu</button>
+        <button>Contact Us</button>
+      </nav>
+    </header>
+    <div id="content"></div>
+    <p>Your #1 potion maker</p>
+    <p>Brewing since 1641</p>
+    <p>Order now or visit us!</p>
+  </body>
 </html>
