feat: Add image content to homepage

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,11 @@
     <div id="content"></div>
     <p>Your #1 potion maker</p>
     <p>Brewing since 1641</p>
+    <img
+      class="main-img"
+      src="./assets/images/cropped-elena-mozhvilo-J2_nIEkIpRM-unsplash.jpg"
+      alt="Shelf of potions"
+    />
     <p>Order now or visit us!</p>
   </body>
 </html>
