feat: Add content to contact page

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
       <nav>
         <button>Home</button>
         <button>Menu</button>
-        <button>Contact Us</button>
+        <button>Contact</button>
       </nav>
     </header>
     <div id="content"></div>
